custom-resource-consumers/takeout/apps/media/qdirstat/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qdirstat
  namespace: media
  labels:
    app: qdirstat
spec:
  serviceName: qdirstat
  selector:
    matchLabels:
      app: qdirstat
  replicas: 1 # active nas
  template:
    metadata:
      labels:
        app: qdirstat
    spec:
      containers:
        - name: qdirstat
          image: jlesage/qdirstat:v23.06.1
          imagePullPolicy: Always
          # command: ["sh","-c","tail -f /dev/null"]
          volumeMounts:
            - name: qdirstat-config-nas
              mountPath: /config
            - name: nas-volume1-media
              mountPath: /mount/nas-volume1-media
          resources:
            requests:
              cpu: 250m
            limits:
              memory: 512Mi
      volumes:
        - name: qdirstat-config-nas
          persistentVolumeClaim:
            claimName: qdirstat-config-nas
        - name: nas-volume1-media
          persistentVolumeClaim:
            claimName: nas-volume1-media
